<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rent.steward.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:id="@+id/taskContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:id="@+id/greeting_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textSize="20dp"/>

                <Button
                    android:id="@+id/sign_up"
                    android:layout_width="128dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/greeting_textView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/sign_up"
                    android:textSize="16dp"/>

                <Button
                    android:id="@+id/login"
                    android:layout_width="128dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up"
                    app:layout_constraintStart_toStartOf="@+id/sign_up"
                    android:text="@string/login"
                    android:textSize="16dp"/>

                <Button
                    android:id="@+id/show_room"
                    android:layout_width="128dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/login"
                    app:layout_constraintStart_toStartOf="@+id/sign_up"
                    android:text="@string/show_user"
                    android:textSize="16dp"
                    tools:layout_editor_absoluteX="128dp"
                    android:layout_marginBottom="16dp" />

                <Button
                    android:id="@+id/call_api"
                    android:layout_width="128dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/show_room"
                    app:layout_constraintStart_toStartOf="@+id/sign_up"
                    android:text="Test Api"
                    android:textSize="16dp"
                    tools:layout_editor_absoluteX="128dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteY="88dp"
                    tools:layout_editor_absoluteX="0dp"
                    app:layout_constraintGuide_percent="0.24512535" />

                <android.support.constraint.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline2"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
